# tuiwidgets

./: .gitignore  AUTORS  NEWS.md  README.md  meson.build  meson_options.txt
doc/examples/: meson.build
doc/examples/getting-started/: getting-started-index.cpp  getting-started.cpp  getting-started.h
doc/examples/modeltrackby/: modeltrackby.cpp
doc/examples/widgets/: boxlayout.cpp  button.cpp  checkbox.cpp  dialog.cpp  document.cpp  inputbox.cpp  label.cpp  listview.cpp  menu.cpp  menubar.cpp  radiobuttons.cpp  root.cpp  textedit.cpp  textline.cpp  window.cpp
doc/tpi/: boxlayout.cpp  boxlayouts-intro-h.tpi  boxlayouts-intro-v.tpi  boxlayouts-nested1.tpi  boxlayouts-nested2.tpi  boxlayouts-stretch-mid.tpi  boxlayouts-stretch-start.tpi  button-default.tpi  button-disabled.tpi  button-focus.tpi  button.cpp  button.h  button.tpi  checkBox.cpp  checkBox.h  checkbox-checked.tpi  checkbox-disabled.tpi  checkbox-focus.tpi  checkbox-partially-checked.tpi  checkbox.cpp  checkbox.tpi  demo_gettingstarted.cpp  demo_gettingstarted.h  demo_gettingstarted.tpi  dialog-focus.tpi  dialog-options.tpi  dialog-windowtitle.tpi  dialog.cpp  dialog.h  dialog.tpi  export_tpi.h  inputBox.cpp  inputBox.h  inputbox-disabled.tpi  inputbox-focus.tpi  inputbox-newline.tpi  inputbox-password.tpi  inputbox.cpp  inputbox.tpi  label-buddy.tpi  (+53 more)
examples/: demo.cpp  demo.h  meson.build
src/: meson.build  symver_qt6.py  tuiwidgets.symver
src/Tui/: Layout_p.cpp  Layout_p.h  ListNode.cpp  ListNode_p.h  MarkupParser.cpp  MarkupParser.h  Utils.cpp  Utils_p.h  ZBasicDefaultWidgetManager.cpp  ZBasicDefaultWidgetManager.h  ZBasicDefaultWidgetManager_p.h  ZBasicWindowFacet.cpp  ZBasicWindowFacet.h  ZBasicWindowFacet_p.h  ZButton.cpp  ZButton.h  ZButton_p.h  ZCheckBox.cpp  ZCheckBox.h  ZCheckBox_p.h  ZClipboard.cpp  ZClipboard.h  ZClipboard_p.h  ZColor.cpp  ZColor.h  ZCommandManager.cpp  ZCommandManager.h  ZCommandManager_p.h  ZCommandNotifier.cpp  ZCommandNotifier.h  ZCommandNotifier_p.h  ZCommon.cpp  ZCommon.h  ZDefaultWidgetManager.cpp  ZDefaultWidgetManager.h  ZDialog.cpp  ZDialog.h  ZDialog_p.h  ZDocument.cpp  ZDocument.h  (+122 more)
src/Tui/Misc/: AbstractTableModelTrackBy.h  SurrogateEscape.cpp  SurrogateEscape.h
src/tests/: Testhelper.cpp  Testhelper.h  abstracttablemodeltrackby.cpp  basicdefaultwidgetmanager.cpp  boxlayout.cpp  catch_main.cpp  catchwrapper.h  clipboard.cpp  command.cpp  defaultwidgetmanager.cpp  eventrecorder.cpp  eventrecorder.h  events.cpp  layoutinvalidation.cpp  loggers.cpp  markupparser.cpp  meson.build  shortcut.cpp  signalrecorder.h  surrogateescape.cpp  terminal.cpp  termpaint_helpers.h  textstyle.cpp  vcheck_base.h  vcheck_qobject.h  vcheck_zdefaultwindowmanager.h  vcheck_zlayout.h  vcheck_zlayoutitem.h  vcheck_zwidget.h  vcheck_zwindow.h  vcheck_zwindowfacet.h  windowcontainer.cpp  windowfacet.cpp  windowlayout.cpp
src/tests/basicwindowfacet/: basicwindowfacet.cpp
src/tests/button/: button-display-O.tpi  button-display-OK-content-margins.tpi  button-display-OK-default.tpi  button-display-OK-disabled.tpi  button-display-OK-with-mnemonic.tpi  button-display-OK.tpi  button-display-clipped-cancel.tpi  button-display-clipped-double-width.tpi  button-display-cyan-O.tpi  button-display-cyan-OK-content-margins.tpi  button-display-cyan-OK-default.tpi  button-display-cyan-OK-disabled.tpi  button-display-cyan-OK-with-mnemonic.tpi  button-display-cyan-OK.tpi  button-display-cyan-clipped-cancel.tpi  button-display-cyan-clipped-double-width.tpi  button-display-cyan-empty.tpi  button-display-cyan-focus-O.tpi  button-display-cyan-focus-OK-content-margins.tpi  button-display-cyan-focus-OK-default-suppressed.tpi  button-display-cyan-focus-OK-disabled.tpi  button-display-cyan-focus-OK-with-mnemonic.tpi  button-display-cyan-focus-OK.tpi  button-display-cyan-focus-clipped-cancel.tpi  button-display-cyan-focus-clipped-double-width.tpi  button-display-cyan-focus-empty.tpi  button-display-dialog-O.tpi  button-display-dialog-OK-content-margins.tpi  button-display-dialog-OK-default.tpi  button-display-dialog-OK-disabled.tpi  button-display-dialog-OK-with-mnemonic.tpi  button-display-dialog-OK.tpi  button-display-dialog-clipped-cancel.tpi  button-display-dialog-clipped-double-width.tpi  button-display-dialog-empty.tpi  button-display-dialog-focus-O.tpi  button-display-dialog-focus-OK-content-margins.tpi  button-display-dialog-focus-OK-default-suppressed.tpi  button-display-dialog-focus-OK-disabled.tpi  button-display-dialog-focus-OK-with-mnemonic.tpi  (+24 more)
src/tests/checkbox/: checkbox-color-single-black-disable-markup.tpi  checkbox-color-single-black-focus-checked.tpi  checkbox-color-single-black-focus-disable.tpi  checkbox-color-single-black-focus-partiallychecked.tpi  checkbox-color-single-black-focus-unchecked.tpi  checkbox-color-single-black-markup.tpi  checkbox-color-single-black.tpi  checkbox-color-single-cyan-focus-checked.tpi  checkbox-color-single-cyan-focus-markup.tpi  checkbox-color-single-cyan-markup-disable.tpi  checkbox-color-single-cyan.tpi  checkbox-color-single-gray-focus-checked.tpi  checkbox-color-single-gray-markup-disable.tpi  checkbox-color-single-gray-markup.tpi  checkbox-color-single-gray.tpi  checkbox-margin-single-margin-2-2-2-2.tpi  checkbox-single-checked.tpi  checkbox-single-default.tpi  checkbox-single-focus.tpi  checkbox-single-settext.tpi  checkbox-single-tristate-disable.tpi  checkbox-single-tristate-focus.tpi  checkbox-single-tristate.tpi  checkbox-single-unchecked.tpi  checkbox-two-send-tab-disable.tpi  checkbox-two-send-tab.tpi  checkbox-withMarkup-checked.tpi  checkbox-withMarkup-disable.tpi  checkbox.cpp
src/tests/color/: color.cpp
src/tests/document/: document.cpp  document2.cpp  document_find.cpp  document_undo.cpp
src/tests/image/: image.cpp
src/tests/inputbox/: inputbox-bare-20x1+2+2.tpi  inputbox-behavior-backspace-wide-char.tpi  inputbox-behavior-char-A-5x1+2+2.tpi  inputbox-behavior-char-ABCD-5x1+2+2.tpi  inputbox-behavior-char-ABCDE-5x1+2+2.tpi  inputbox-behavior-char-ABCDEF-5x1+2+2.tpi  inputbox-behavior-char-ABCDEFX-5x1+2+2.tpi  inputbox-behavior-disable.tpi  (+104 more)
(+642 files in other folders)
